# sklearning_digits

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: docker-compose.yml
sklearning_digits/: main.py
